--- a/AdminTools/View/UserManagerView.xaml
+++ b/AdminTools/View/UserManagerView.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:uc="clr-namespace:AdminTools.View"
-        Title="Редактор пользователей" WindowState="Maximized">
+        Title="Редактор пользователей" WindowState="Maximized"
+        Icon="pack://application:,,,/Resources;component/Images/UserGroup48x48.png">
     <Grid>
         
         <Grid.RowDefinitions>
