--- a/MainLib/View/PersonInsuranceDocumentsView.xaml
+++ b/MainLib/View/PersonInsuranceDocumentsView.xaml
@@ -7,7 +7,7 @@
         xmlns:wpf="http://wpfcontrols.com/"
         xmlns:core="clr-namespace:Core;assembly=StuffLib"
         mc:Ignorable="d"
-        Title="Страховые документы" SizeToContent="WidthAndHeight" WindowStyle="None" BorderBrush="White" d:DataContext="{d:DesignInstance mainLib:PersonInsuranceDocumentsViewModel}"
+        Title="Страховые документы" SizeToContent="WidthAndHeight" WindowStartupLocation="Manual" d:DataContext="{d:DesignInstance mainLib:PersonInsuranceDocumentsViewModel}"
         Loaded="Window_Loaded" MinWidth="300" MinHeight="150">
 
     <Window.Resources>
@@ -52,9 +52,9 @@
     </Window.Resources>
 
     <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" LastChildFill="True">
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Отмена" Margin="3" Padding="2" Background="#FFFFBEBE" Command="{Binding CancelCommand}" Click="button_Click"/>
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Выбрать" Margin="3" Padding="2" Background="#FFADEE9A"  Command="{Binding AcceptCommand}" Click="button_Click"/>
+            <Button Content="Отмена" Margin="3" Padding="2" Background="#FFFFBEBE" Command="{Binding CancelCommand}" Click="button_Click"/>
         </StackPanel>
         <Button DockPanel.Dock="Bottom"  HorizontalAlignment="Stretch" Height="24"  Command="{Binding AddInsuranceDocumentCommand}" Content="Добавить" Margin="5" Background="White"/>
         <ItemsControl BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding InsuranceDocuments}" Margin="5">
